# lightcurve-hypothesis

./: .pre-commit-config.yaml  CLAUDE.md  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  pr-validation.yml  release.yml
docs/: Makefile  requirements.txt
docs/scripts/: generate_gallery.py
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  gallery.rst  index.rst  installation.rst  quickstart.rst  sg_execution_times.rst
docs/source/_static/: custom.css
docs/source/_static/gallery/: index.json
docs/source/_static/gallery/code/: baseline_flat.py  baseline_random_walk.py  baseline_smooth.py  basic_random.py  basic_with_errors.py  composite_realistic.py  modified_gaps.py  modified_outliers.py  modified_trend.py  periodic_multi.py  periodic_simple.py  periodic_with_noise.py  transient_eclipse.py  transient_flare.py  transient_supernova.py
docs/source/_static/gallery/data/: baseline_flat.npz  baseline_random_walk.npz  baseline_smooth.npz  basic_random.npz  basic_with_errors.npz  composite_realistic.npz  periodic_multi.npz  periodic_simple.npz  periodic_with_noise.npz  transient_eclipse.npz  transient_flare.npz  transient_supernova.npz
docs/source/auto_examples/: index.rst  plot_basic_lightcurves.codeobj.json  plot_basic_lightcurves.ipynb  plot_basic_lightcurves.py.md5  plot_basic_lightcurves.rst  plot_basic_usage.codeobj.json  plot_basic_usage.ipynb  plot_basic_usage.py.md5  plot_basic_usage.rst  plot_ensemble_statistics.codeobj.json  plot_ensemble_statistics.ipynb  plot_ensemble_statistics.py  plot_ensemble_statistics.py.md5  plot_ensemble_statistics.rst  plot_modifiers.codeobj.json  plot_modifiers.ipynb  plot_modifiers.py  plot_modifiers.py.md5  plot_modifiers.rst  plot_periodic_signals.codeobj.json  plot_periodic_signals.ipynb  plot_periodic_signals.py.md5  plot_periodic_signals.rst  plot_transformations.codeobj.json  plot_transformations.ipynb  plot_transformations.py  plot_transformations.py.md5  plot_transformations.rst  plot_transients.codeobj.json  plot_transients.ipynb  plot_transients.py  plot_transients.py.md5  plot_transients.rst  searchindex  sg_execution_times.rst
docs/source/examples/: README.rst  plot_basic_lightcurves.py  plot_periodic_signals.py
examples/: README.txt  plot_basic_usage.py
src/hypothesis_lightcurves/: __init__.py  generators.py  models.py  modifiers.py  utils.py  visualization.py
tests/: __init__.py  test_flexible_baseline.py  test_generators.py  test_modifiers.py
