[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypothesis_lightcurves"
version = "0.1.0"
description = "A lightcurve generation testing tool using python-hypothesis"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "William Fong"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "hypothesis>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "ipython",
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "numpydoc>=1.6",
    "sphinx-autodoc-typehints>=1.25",
    "myst-parser>=2.0",
    "matplotlib>=3.5",
    "matplotlib-inline>=0.1",
    "sphinx-gallery>=0.14",
]

all = [
    "hypothesis_lightcurves[dev]",
    "hypothesis_lightcurves[docs]",
]

[project.urls]
"Homepage" = "https://github.com/williamfong/lightcurve-hypothesis"
"Bug Tracker" = "https://github.com/williamfong/lightcurve-hypothesis/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hypothesis_lightcurves = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=hypothesis_lightcurves",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src/hypothesis_lightcurves"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
